Fixes horizontal scrolling on iPhone cf. #110

--- a/forum/static/css/style.css
+++ b/forum/static/css/style.css
@@ -1165,11 +1165,25 @@ textarea,
     #credits,
     #header,
     #navigation {
-        width: 95%;
         margin-left: auto;
         margin-right: auto;
         float: none;
         clear: both;
+    }
+
+    #content,
+    #credits,
+    #navigation {
+        width: 100%;
+    }
+
+    #content table.categories,
+    #content table.threads,
+    #board,
+    #header {
+        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
     }
     /* * */
 
